# MaxClique

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  cliquer_wrapper.cpp  cliquer_wrapper.h  coloring_problem.cpp  coloring_problem.h  graph.cpp  graph.h  main.cpp  simple_solver.cpp  simple_solver.h  utils.h
